compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__pattern_with_unit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1793
expression: "\nfn go(x) {\n  let assert <<1:size(2)-unit(2), 2:size(3)-unit(4)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<1:size(2)-unit(2), 2:size(3)-unit(4)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

function go(x) {
  if (
    x.bitSize !== 16 ||
    bitArraySliceToInt(x, 0, 4, true, false) !== 1 ||
    bitArraySliceToInt(x, 4, 16, true, false) !== 2
  ) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, pattern_start: 25, pattern_end: 65 }
    )
  }
  return x;
}
