compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__qualified_constant_in_pattern_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 2825
expression: "\nimport sizes\n\npub fn go(data) {\n  let assert <<value:size(sizes.byte_size)>> = data\n  value\n}\n"
---
----- SOURCE CODE
-- sizes.gleam
pub const byte_size = 8

-- main.gleam

import sizes

pub fn go(data) {
  let assert <<value:size(sizes.byte_size)>> = data
  value
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";
import * as $sizes from "../sizes.mjs";

const FILEPATH = "src/module.gleam";

export function go(data) {
  let value;
  if (byte_size >= 0 && data.bitSize === byte_size) {
    value = bitArraySliceToInt(data, 0, byte_size, true, false);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: data, start: 35, end: 84, pattern_start: 46, pattern_end: 77 }
    )
  }
  return value;
}
