compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__segments_shadowing_each_other.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  let n = 1\n  case x {\n    <<n, rest:size(n)>> -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let n = 1
  case x {
    <<n, rest:size(n)>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  let n = 1;
  if (x.bitSize >= 8) {
    let n$1 = x.byteAt(0);
    if (x.bitSize === 8 + n$1) {
      let n$2 = n$1;
      let rest = bitArraySliceToInt(x, 8, 8 + n$2, true, false);
      return 1;
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
